corrections on routes
update membership table while creating a group and while joining a group, join as member
